--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/4-Media/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/4-Media/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-13T15:36:51Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ocYFjjADXrDu
-								l74Y5Fcp7g==
+								kFK+yzBJTIbi
+								Gu9RB+fMcg==
 								</data>
 								<key>Size</key>
-								<integer>50155</integer>
+								<integer>50264</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
