--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Fc0rpCUtUWLS
-								Hh39+oY6Wg==
+								24MMS8gEp8QY
+								0D3vpg7ntQ==
 								</data>
 								<key>Size</key>
-								<integer>50570</integer>
+								<integer>50679</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
