--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -282,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								p4BEWZPnmEcX
-								NaIx00xXkA==
+								eD5hwnc76q2x
+								pmv04kfIzQ==
 								</data>
 								<key>Size</key>
-								<integer>100723</integer>
+								<integer>100832</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
