--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -302,11 +302,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2CxRDQNcLCvP
-								eoxAumaiCg==
+								5bReaLNY0YLD
+								N7kYbEkeoQ==
 								</data>
 								<key>Size</key>
-								<integer>130953</integer>
+								<integer>131062</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
