--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-Potential-funding/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-Potential-funding/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -62,11 +62,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tjtn8Td0QMEK
-								E6DF7BIWxA==
+								r6NS71HxAoN5
+								458JcPfkyw==
 								</data>
 								<key>Size</key>
-								<integer>132419</integer>
+								<integer>134383</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								U5FbgsI0ga2y
-								NQETdc5ZOQ==
+								Ndw+Xe/AeCxw
+								COdlGRcMGw==
 								</data>
 								<key>Size</key>
-								<integer>41530</integer>
+								<integer>42622</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
