--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								t4V7tfgNJ4oq
-								7bRcMtt6Ng==
+								nQEl48Hnfi3V
+								Eff5+GzoJA==
 								</data>
 								<key>Size</key>
-								<integer>67826</integer>
+								<integer>67935</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
