--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-13T15:34:36Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -272,11 +272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1O02I/N++I93
-								RG3yMyrVbA==
+								zKRXhhydoX18
+								f8oRNq749g==
 								</data>
 								<key>Size</key>
-								<integer>69248</integer>
+								<integer>69357</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
