--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-Community-Lectures/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-Community-Lectures/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								H106I6zZzcvL
-								mRcxTT8biw==
+								/NHYNG0pdRfs
+								lW4qXLZrog==
 								</data>
 								<key>Size</key>
-								<integer>43402</integer>
+								<integer>43511</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
