--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/08-Big-Spread002C-Big-Dead/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/08-Big-Spread002C-Big-Dead/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fcaq6vZM+bEm
-								3kyT2Z28Sw==
+								6xf3RayIzGEP
+								Mac+s43FLg==
 								</data>
 								<key>Size</key>
-								<integer>40310</integer>
+								<integer>40419</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
