--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -42,11 +42,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wnMYr/YFwBFI
-								iuqbKqKo7Q==
+								5b2Ojia/PiBD
+								uj0kYb0Uog==
 								</data>
 								<key>Size</key>
-								<integer>53181</integer>
+								<integer>53287</integer>
 							</dict>
 							<key>index_files/small_109761.jpg</key>
 							<dict>
