--- a/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/3-Associated-Faculty/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/3-Associated-Faculty/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vWMlOsy61hpK
-								aj9z4tWaOQ==
+								+x6MzeF30vi9
+								cjISfbQ95A==
 								</data>
 								<key>Size</key>
-								<integer>35696</integer>
+								<integer>35805</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
