--- a/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/2-Paper-Shredder/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/2-Paper-Shredder/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zm1xLBfGW1iT
-								oW2tEFY48Q==
+								//zKqdGod/7r
+								YHAoyVD1fQ==
 								</data>
 								<key>Size</key>
-								<integer>84390</integer>
+								<integer>84499</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
