--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nTB0kOeLdebK
-								Ng8cdTf6cA==
+								DnGrdOYxWVTG
+								UdxUOeeamA==
 								</data>
 								<key>Size</key>
-								<integer>79948</integer>
+								<integer>80051</integer>
 							</dict>
 							<key>index_files/medium_526226.png</key>
 							<dict>
