--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/7-All-courses/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/7-All-courses/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								t1PbGemUN+4g
-								PlShWHF2nQ==
+								srTVrrvpedpB
+								cad4Uf2BRA==
 								</data>
 								<key>Size</key>
-								<integer>40090</integer>
+								<integer>40199</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
