--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X63eZ8PCTVFJ
-								aLljRuPfKQ==
+								HmTtQETN/uz6
+								q/1IOgTa7g==
 								</data>
 								<key>Size</key>
-								<integer>41542</integer>
+								<integer>41651</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
