--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/09-Prediction003A-The-Next-Big-Thing/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/09-Prediction003A-The-Next-Big-Thing/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lZyXJuBPx/4w
-								19HBSx8Q+g==
+								6tyfymRovVt8
+								dcQlhfDlNQ==
 								</data>
 								<key>Size</key>
-								<integer>40320</integer>
+								<integer>40429</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
