--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/10-Big-Scale002C-...-Big-Fail003F/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/10-Big-Scale002C-...-Big-Fail003F/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SBMzsVH3El7h
-								TuCgvI1YmQ==
+								hjb+XVtRlPx0
+								4NMFjJM+mg==
 								</data>
 								<key>Size</key>
-								<integer>40314</integer>
+								<integer>40423</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
