--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/11-Big-Data002C-Big-Stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/11-Big-Data002C-Big-Stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ex4WnqGIIslH
-								QWOanyZ35g==
+								s3v4Y9hZPa7E
+								64CwQv2fyA==
 								</data>
 								<key>Size</key>
-								<integer>40311</integer>
+								<integer>40420</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
