--- a/vermontcomplexsystems-foundation.rw/Pages/09-Donate/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/09-Donate/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vX3PaZCNaPEq
-								b87CYGmxCw==
+								O8NavZh79H/3
+								08iRcKcAQQ==
 								</data>
 								<key>Size</key>
-								<integer>41824</integer>
+								<integer>41930</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
