--- a/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/3-SCRaPS003A-Student-Complexity-Research-and-Pizza-Seminar/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/3-SCRaPS003A-Student-Complexity-Research-and-Pizza-Seminar/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KOmOSi6DvjJ6
-								FgpyDSYfcA==
+								t+PPCJhx8WRP
+								mcTcOOZDxw==
 								</data>
 								<key>Size</key>
-								<integer>40322</integer>
+								<integer>40431</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
