--- a/vermontcomplexsystems-foundation.rw/Pages/11-404/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/11-404/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-14T14:14:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -102,11 +102,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								C/WOwMc6uKSx
-								guP6z8GjSg==
+								1QLCk6fW3yaE
+								djRNfRwxbQ==
 								</data>
 								<key>Size</key>
-								<integer>37869</integer>
+								<integer>37975</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
