updated language funding page
updated language funding page

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5363,7 +5363,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-14T14:20:46Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5412,11 +5412,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ndw+Xe/AeCxw
-								COdlGRcMGw==
+								07OjC6QqSDyN
+								nlT7IvS3eQ==
 								</data>
 								<key>Size</key>
-								<integer>42622</integer>
+								<integer>42581</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6235,7 +6235,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-13T15:36:51Z</date>
+						<date>2018-05-14T14:20:46Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7274,11 +7274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iJsGfjlNlHFn
-								0Jeao3FahA==
+								2VX3aLds6+70
+								5ImjcD2dTw==
 								</data>
 								<key>Size</key>
-								<integer>2067</integer>
+								<integer>1979</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
