--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5711,7 +5711,7 @@
 					<key>page7 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-14T14:25:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5980,11 +5980,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5bReaLNY0YLD
-								N7kYbEkeoQ==
+								zt+Z6QAoWM1B
+								ogrgLYqZFg==
 								</data>
 								<key>Size</key>
-								<integer>131062</integer>
+								<integer>131241</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
