--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3101,7 +3101,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-14T14:43:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3286,6 +3286,16 @@
 								<key>Size</key>
 								<integer>78971</integer>
 							</dict>
+							<key>files/stacks-image-f377940-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								7t1L83M+dR3B
+								5dg1qRB/Hw==
+								</data>
+								<key>Size</key>
+								<integer>63267</integer>
+							</dict>
 							<key>files/stacks-image-f38d32b-800x688.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3320,11 +3330,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rxwf4nIxJ/Fd
-								2l7sRQKtGA==
+								GlP8czOWB4Pb
+								FtPh4yLMXQ==
 								</data>
 								<key>Size</key>
-								<integer>164222</integer>
+								<integer>166410</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -3340,11 +3350,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zKRXhhydoX18
-								f8oRNq749g==
+								bfi7UQnLidXp
+								WUa8Xc1Uew==
 								</data>
 								<key>Size</key>
-								<integer>69357</integer>
+								<integer>70754</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4977,7 +4987,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-14T14:43:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5162,6 +5172,16 @@
 								<key>Size</key>
 								<integer>338288</integer>
 							</dict>
+							<key>files/stacks-image-4d44245-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								+vdMEyY2Nma2
+								i47OSlhwZA==
+								</data>
+								<key>Size</key>
+								<integer>67249</integer>
+							</dict>
 							<key>files/stacks-image-5e1ff49-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -5326,11 +5346,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OdRZSw33KooE
-								/MofE2Xl+Q==
+								YWBAJKIZExq7
+								iizLC0h5jg==
 								</data>
 								<key>Size</key>
-								<integer>184170</integer>
+								<integer>188356</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -5346,11 +5366,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XiOSs7ETJid9
-								yrOHK8DNHA==
+								yjfP6DYDlGLd
+								IAsubWUHxg==
 								</data>
 								<key>Size</key>
-								<integer>99109</integer>
+								<integer>102318</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
