--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-14T14:43:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -218,6 +218,16 @@
 								<key>Size</key>
 								<integer>338288</integer>
 							</dict>
+							<key>files/stacks-image-4d44245-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								+vdMEyY2Nma2
+								i47OSlhwZA==
+								</data>
+								<key>Size</key>
+								<integer>67249</integer>
+							</dict>
 							<key>files/stacks-image-5e1ff49-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -382,11 +392,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OdRZSw33KooE
-								/MofE2Xl+Q==
+								YWBAJKIZExq7
+								iizLC0h5jg==
 								</data>
 								<key>Size</key>
-								<integer>184170</integer>
+								<integer>188356</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -402,11 +412,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XiOSs7ETJid9
-								yrOHK8DNHA==
+								yjfP6DYDlGLd
+								IAsubWUHxg==
 								</data>
 								<key>Size</key>
-								<integer>99109</integer>
+								<integer>102318</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
