CA Tech Language update
CA Tech Language update

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5383,7 +5383,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:20:46Z</date>
+						<date>2018-05-14T14:54:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5432,11 +5432,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								07OjC6QqSDyN
-								nlT7IvS3eQ==
+								tGsXIT4udotD
+								7SFG4jNMqQ==
 								</data>
 								<key>Size</key>
-								<integer>42581</integer>
+								<integer>42603</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
