--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-Potential-funding/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-Potential-funding/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:20:46Z</date>
+						<date>2018-05-14T14:54:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								07OjC6QqSDyN
-								nlT7IvS3eQ==
+								tGsXIT4udotD
+								7SFG4jNMqQ==
 								</data>
 								<key>Size</key>
-								<integer>42581</integer>
+								<integer>42603</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
