research jam, idea collider, updated HWB description
research jam, idea collider, updated HWB description

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-17T13:03:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -392,11 +392,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wa9D+kmqpNYT
-								Hkq2HmAgeg==
+								QQ5tnULxO/og
+								lZaHdp/RSQ==
 								</data>
 								<key>Size</key>
-								<integer>111066</integer>
+								<integer>111194</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
