--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:11Z</date>
+						<date>2018-05-17T13:03:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IHjrh0SUOefK
-								EMvSTdEWdw==
+								g9NT1HqkFKA+
+								ZZnXJcDg8A==
 								</data>
 								<key>Size</key>
-								<integer>105963</integer>
+								<integer>106091</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
