--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:11Z</date>
+						<date>2018-05-17T13:03:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nQEl48Hnfi3V
-								Eff5+GzoJA==
+								bW9lvgXlGSdI
+								Px1LGP8tlw==
 								</data>
 								<key>Size</key>
-								<integer>67935</integer>
+								<integer>68051</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
