--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Idea-Collider/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Idea-Collider/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-17T13:13:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uipweXUEujNk
-								/2LEFm3VEA==
+								wnzDxIveVsm7
+								aXt6ar3VNw==
 								</data>
 								<key>Size</key>
-								<integer>130330</integer>
+								<integer>130502</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jyVsRtCsVABF
-								tlYuBMEgIQ==
+								zVcEBZvAQQhi
+								GrIYIZY3EQ==
 								</data>
 								<key>Size</key>
-								<integer>40773</integer>
+								<integer>41624</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
