--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-17T13:03:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -62,11 +62,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/70f8inj7wy2
-								c+lfq7o/oQ==
+								ExMopyiaQ/8J
+								zM6kuSkOIQ==
 								</data>
 								<key>Size</key>
-								<integer>130420</integer>
+								<integer>131766</integer>
 							</dict>
 							<key>files/stacks_page_page38.js</key>
 							<dict>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HmTtQETN/uz6
-								q/1IOgTa7g==
+								++3Zd1vXreI9
+								/vSYJRSmyA==
 								</data>
 								<key>Size</key>
-								<integer>41651</integer>
+								<integer>43009</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
