--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2579,7 +2579,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:11Z</date>
+						<date>2018-05-17T13:03:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2838,11 +2838,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wHAgm8cVODDd
-								826CJtQg1Q==
+								LuWVJiIQdVPn
+								oM2OCj5tpg==
 								</data>
 								<key>Size</key>
-								<integer>71649</integer>
+								<integer>72108</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2855,7 +2855,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:11Z</date>
+						<date>2018-05-17T13:03:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3084,11 +3084,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nQEl48Hnfi3V
-								Eff5+GzoJA==
+								bW9lvgXlGSdI
+								Px1LGP8tlw==
 								</data>
 								<key>Size</key>
-								<integer>67935</integer>
+								<integer>68051</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3367,7 +3367,7 @@
 					<key>page37 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-17T13:13:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3426,11 +3426,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uipweXUEujNk
-								/2LEFm3VEA==
+								wnzDxIveVsm7
+								aXt6ar3VNw==
 								</data>
 								<key>Size</key>
-								<integer>130330</integer>
+								<integer>130502</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -3446,11 +3446,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jyVsRtCsVABF
-								tlYuBMEgIQ==
+								zVcEBZvAQQhi
+								GrIYIZY3EQ==
 								</data>
 								<key>Size</key>
-								<integer>40773</integer>
+								<integer>41624</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3463,7 +3463,7 @@
 					<key>page38 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-17T13:03:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3492,11 +3492,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/70f8inj7wy2
-								c+lfq7o/oQ==
+								ExMopyiaQ/8J
+								zM6kuSkOIQ==
 								</data>
 								<key>Size</key>
-								<integer>130420</integer>
+								<integer>131766</integer>
 							</dict>
 							<key>files/stacks_page_page38.js</key>
 							<dict>
@@ -3512,11 +3512,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HmTtQETN/uz6
-								q/1IOgTa7g==
+								++3Zd1vXreI9
+								/vSYJRSmyA==
 								</data>
 								<key>Size</key>
-								<integer>41651</integer>
+								<integer>43009</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3999,7 +3999,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-17T13:03:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4358,11 +4358,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wa9D+kmqpNYT
-								Hkq2HmAgeg==
+								QQ5tnULxO/og
+								lZaHdp/RSQ==
 								</data>
 								<key>Size</key>
-								<integer>111066</integer>
+								<integer>111194</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4641,7 +4641,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:11Z</date>
+						<date>2018-05-17T13:03:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4970,11 +4970,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IHjrh0SUOefK
-								EMvSTdEWdw==
+								g9NT1HqkFKA+
+								ZZnXJcDg8A==
 								</data>
 								<key>Size</key>
-								<integer>105963</integer>
+								<integer>106091</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6219,7 +6219,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:12Z</date>
+						<date>2018-05-17T13:03:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6268,11 +6268,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								B0PKS8aPquP0
-								duAn/ohqqw==
+								y566cBlDDRiv
+								XYeLBzi9pA==
 								</data>
 								<key>Size</key>
-								<integer>3348</integer>
+								<integer>3508</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6285,7 +6285,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:20:46Z</date>
+						<date>2018-05-17T13:03:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7324,11 +7324,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2VX3aLds6+70
-								5ImjcD2dTw==
+								iJsGfjlNlHFn
+								0Jeao3FahA==
 								</data>
 								<key>Size</key>
-								<integer>1979</integer>
+								<integer>2067</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
