--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-14T14:14:11Z</date>
+						<date>2018-05-17T13:03:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -292,11 +292,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wHAgm8cVODDd
-								826CJtQg1Q==
+								LuWVJiIQdVPn
+								oM2OCj5tpg==
 								</data>
 								<key>Size</key>
-								<integer>71649</integer>
+								<integer>72108</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
